#2352 Node context toolbar with an overflow menu and toolbar items behave oddly on Safari-fix

--- a/canvas_modules/common-canvas/src/toolbar/toolbar.scss
+++ b/canvas_modules/common-canvas/src/toolbar/toolbar.scss
@@ -179,7 +179,7 @@ $toolbar-divider-width: 1px;
 
 .toolbar-overflow-item {
 	background-color: $layer-01;
-	display: inline-block;
+	//display: inline-block;
 
 	& button {
 		padding: 0;
